--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-web-client-implementation/node_modules/
-web-client-implementation/.parcel-cache/
-web-client-implementation/dist/
+client-web/node_modules/
+client-web/.parcel-cache/
+client-web/dist/
